Fix share border-radius on mobile

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ p {
     background-color: var(--white);
     border-radius: 0 0 0.5rem 0.5rem;
     position: relative;
+    overflow: hidden;
 }
 
 .post__title {
@@ -250,6 +251,7 @@ p {
         width: 445px;
         padding: 2.125rem 2.5rem 1.875rem;
         border-radius: 0 0.5rem 0.5rem 0;
+        overflow: visible;
     }
 
     .post__title {
